--- a/quiz/templates/quiz/pages/quiz.html
+++ b/quiz/templates/quiz/pages/quiz.html
@@ -9,7 +9,67 @@
 </head>
 
 <body>
-
+    <div id="app">
+        <div class="container mt-5 pt-5">
+            <div class="col-md-6 mx-auto">
+                <h3>Give Quiz</h3>
+                <hr>
+                <div v-for="question in questions">
+                    <p>[[question.question]]</p>
+                    <div class="form-check" v-for="answer in question.answers">
+                        <input @change="checkAnswer($event, question.uuid)" :value="answer.answer" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label" for="flexRadioDefault1">
+                            [[answer.answer]]
+                        </label>
+                    </div>
+                    <hr>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script>
+        var app = new Vue({
+            el: '#app',
+            delimiters: ['[[', ']]'],
+            data() {
+                return {
+                    category: '{{ category }}',
+                    questions: [],
+                }
+            },
+            methods: {
+                getQuestions() {
+                    fetch('/api/get-quiz/?category=' + this.category)
+                        .then(response => response.json())
+                        .then(data => {
+                            this.questions = data.data; // Assuming the data structure from the server
+                        })
+                        .catch(error => {
+                            console.error('Error fetching questions:', error);
+                        });
+                },
+                checkAnswer(event, uuid) {
+                    this.questions.map(questions =>{
+                        for(var i=0;i<questions.answers.length;i++){
+                            if(questions.uuid == uuid){
+                                if(questions.answers[i].answer == event.target.value){
+                                    if (questions.answers[i].is_correct == true){
+                                        alert('Correct Answer')
+                                    }else{
+                                        alert('Wrong Answer')
+                                    }
+                                }
+                            }
+                        }
+                    })
+                }
+            },
+            created() {
+                this.getQuestions(); // Call the method when the Vue instance is created
+            },
+        });
+    </script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 </html>
